force-app/main/default/objects/Rate_Card__c/Rate_Card__c.object-meta.xml
<CustomObject>
    <description>Effective-dated labor rate by offering, role, and labor pool.</description>
    <label>CD Rate Card</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Rate Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD Rate Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>