force-app/main/default/objects/Rate_Card__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <description>Last date this rate applies (inclusive). Leave blank for open-ended.</description>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>