force-app/main/default/objects/Rate_Card__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <description>First date this rate applies (inclusive).</description>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>