force-app/main/default/objects/Rate_Card__c/validationRules/Effective_dates_order.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_dates_order</fullName>
    <active>true</active>
    <description>Effective End must be on or after Effective Start when populated.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_End__c)), Effective_End__c &lt; Effective_Start__c)</errorConditionFormula>
    <errorDisplayField>Effective_End__c</errorDisplayField>
    <errorMessage>Effective End must be on or after Effective Start.</errorMessage>
</ValidationRule>